# ControllerKit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_windows.yml
include/: Controller.hxx  ControllerKit.hxx  DualSense.hxx  DualShock4.hxx  Gaming.Input.hxx  GamingInputController.hxx  HID.hxx  HIDController.hxx  Interface.hxx  Mapper.hxx  Math.hxx  Types.h  Types.hxx  USB.hxx  WorkerThread.hxx  XInputController.hxx
include/interfaces/: IAdaptiveTriggerController.hxx  IImpulseTriggerController.hxx  ILightbarController.hxx  IRumbleController.hxx  ITouchpadController.hxx
lib/: libusb.lib
plugins/managed/: ControllerKit.hxx
src/: Controller.cxx  ControllerKit.cxx  DualSense.cxx  DualShock4.cxx  HIDController.cxx
src/win32/: Gaming.Input.cxx  GamingInputController.cxx  HID.cxx  Interface.cxx  USB.cxx  XInputController.cxx
src/win64/: Interface.cxx
test/: CMakeLists.txt  main.cxx
test/libs/ControllerKit/: ControllerKit.hxx  ControllerKit.lib
test/src/: Main.cxx
